--- a/Diplom.Persistence/Diplom.Persistence.csproj
+++ b/Diplom.Persistence/Diplom.Persistence.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\Diplom.Application\Diplom.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
