--- a/Diplom.Application.Abstracts/Diplom.Application.Abstracts.csproj
+++ b/Diplom.Application.Abstracts/Diplom.Application.Abstracts.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Folder Include="Mediator\Authentication\Queries\" />
+    <Folder Include="Mediator\Product\Commands\" />
   </ItemGroup>
 
   <ItemGroup>
