--- a/Diplom.Application.Abstracts/Diplom.Application.Abstracts.csproj
+++ b/Diplom.Application.Abstracts/Diplom.Application.Abstracts.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <Folder Include="Mediator\Authentication\Queries\" />
-    <Folder Include="Mediator\Product\Commands\" />
+    <Folder Include="Mediator\Products\Commands\" />
   </ItemGroup>
 
   <ItemGroup>
