--- a/Diplom.Application/Diplom.Application.csproj
+++ b/Diplom.Application/Diplom.Application.csproj
@@ -25,7 +25,7 @@
 
   <ItemGroup>
     <Folder Include="MediatorHandlers\Authentication\Queries\" />
-    <Folder Include="MediatorHandlers\Product\Commands\" />
+    <Folder Include="MediatorHandlers\Products\Commands\" />
   </ItemGroup>
 
 </Project>
