FE Меню категорий. Отображение продуктов по категории.

--- a/Diplom.Application/Diplom.Application.csproj
+++ b/Diplom.Application/Diplom.Application.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <Folder Include="MediatorHandlers\Authentication\Queries\" />
+    <Folder Include="MediatorHandlers\Categories\Commands\" />
     <Folder Include="MediatorHandlers\Products\Commands\" />
   </ItemGroup>
 
