--- a/Diplom.Application/Diplom.Application.csproj
+++ b/Diplom.Application/Diplom.Application.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <Folder Include="MediatorHandlers\Authentication\Queries\" />
     <Folder Include="MediatorHandlers\Categories\Commands\" />
+    <Folder Include="MediatorHandlers\Orders\Queries\" />
     <Folder Include="MediatorHandlers\Products\Commands\" />
   </ItemGroup>
 
