Подключение к Postgre. Добавил RoleEnum

--- a/Diplom/Server/appsettings.json
+++ b/Diplom/Server/appsettings.json
@@ -3,7 +3,8 @@
     "Token" :  "MaflendLeonAflendSecretKey"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=Diplom;Trusted_Connection=True;"
+    "SqlServerConnection": "Server=localhost\\SQLEXPRESS;Database=Diplom;Trusted_Connection=True;",
+    "PostgreConnection": "Host=localhost;Port=5434;Database=Diplom;Username=postgres;Password=Aflendleon2"
   },
   "Logging": {
     "LogLevel": {
