Меню для администратора. Таблица и график продаж

--- a/Diplom/Client/Diplom.Client.csproj
+++ b/Diplom/Client/Diplom.Client.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
     <PackageReference Include="MudBlazor" Version="6.0.10" />
+    <PackageReference Include="Radzen.Blazor" Version="3.18.14" />
     <PackageReference Include="Toolbelt.Blazor.HttpClientInterceptor" Version="10.1.0" />
   </ItemGroup>
 
