--- a/Diplom.Client.Infrastructure/Diplom.Client.Infrastructure.csproj
+++ b/Diplom.Client.Infrastructure/Diplom.Client.Infrastructure.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+    <PackageReference Include="ServiceStack.Common" Version="6.2.0" />
   </ItemGroup>
 
   <ItemGroup>
